--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,3 @@
-
+spring.datasource.url=jdbc:mysql://localhost:3306/logistica
+spring.datasource.username=cabuloso
+spring.datasource.password=cabulosa
