--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/logistica
 spring.datasource.username=cabuloso
 spring.datasource.password=cabulosa
+spring.jpa.hibernate.ddl-auto=update
